<resources>
    <string name="app_name">Refugee</string>
    <string name="btn_jugar">Play</string>
    <string name="btn_opciones">Options</string>
    <string name="btn_continuar">Continue</string>
    <string name="btn_nueva">New game</string>
    <string name="btn_creditos">Credits</string>
    <string name="btn_salir">Exit</string>
    <string name="btn_cerrar">Close</string>
    <string name="dialog_play_mensaje">Do you want to continue or start a new game?</string>
    <string name="btn_prueba">Prueba del menu</string>
    <string name="idea">Original script</string>
    <string name="script">Bianca Radu\nMaría Moreno\nChema Prior\nDaniel Cabras</string>
    <string name="route1">Madrid-Milan coding</string>
    <string name="madrid_autores">Adrián Portela \nJosé Carlos Sánchez</string>
    <string name="route2">Milan-Sarajevo coding</string>
    <string name="milan_autores">Roberto Ramos\nSergio Jimenez</string>
    <string name="route3">Sarajevo-Istanbul coding</string>
    <string name="sarajevo_autores">Alejandro Luna\nJorge Morón</string>
    <string name="route4">Istanbul-Tehran coding</string>
    <string name="estambul_autores">Luís M. Barquillo\nMiguel del Puerto</string>
    <string name="route5">Tehran-Mumbai coding</string>
    <string name="teheran_autores">Raúl Fernandez\nRoberto Calvo</string>
    <string name="madrid_win_mensaje">Now you can travel to Sarajevo.</string>
    <string name="madrid_lose_mensaje">You don\'t acquired the ticket. Try again?</string>
    <string name="madrid_salirJuego">Are you sure do you want to quit the game?</string>
    <string name="madrid_jugar">PLAY</string>
    <string name="toastSiguiente">You\'ve to choose and option before continue</string>
    <string name="madrid_maletas_desc1">SUITCASE A</string>
    <string name="madrid_maletas_desc2">SUITCASE B</string>
    <string name="madrid_trans_desc1">LORRY: PAY 300€</string>
    <string name="madrid_trans_desc2">STEAL A CAR</string>
    <string name="madrid_trans_toast">You don\'t have enough money to choose this transport</string>
    <string name="madrid_peso2_desc1">FOODS</string>
    <string name="madrid_peso2_desc2">BLANKETS</string>
    <string name="madrid_peso2_desc3">MEMORIES</string>
    <string name="madrid_pie_desc1">I\'LL DO IT</string>
    <string name="madrid_pie_desc2">I\'M AFRAID</string>
    <string name="madrid_rueda2_desc1">KEEP WALKING</string>
    <string name="madrid_rueda2_desc2">WAIT HELP</string>
    <string name="madrid_passport_desc1">YOU HAVE ONE</string>
    <string name="madrid_passport_desc2">FAKE ONE: 100€</string>
    <string name="madrid_passport_toast1">You don\'t have a passport</string>
    <string name="madrid_passport_toast2">You already have a passport!</string>
    <string name="madrid_help_goal">GOAL:</string>
    <string name="madrid_help_easy">EASY</string>
    <string name="madrid_help_medium">MEDIUM</string>
    <string name="madrid_help_hard">HARD</string>
    <string name="madrid_help_extreme">EXTREME</string>
    <string name="madrid_main">The World War III has taken place in Europe. You\'ve to flee in order to save your life.\n\n Hurry up! Try to be wise!</string>
    <string name="madrid_maletas">The enemies are about to arrive. What will you take with you?</string>
    <string name="madrid_trans_a">Very good. Now you have 450€, foods, blankets and memories.\n\n Now it\'s time to leave. Do you want to pay for a means of transport or steal a car?</string>
    <string name="madrid_trans_b">Very good. Now you have 250€, a passport, foods, blankets and memories.\n\n Now it\'s time to leave. Do you want to pay for a means of transport or steal a car?</string>
    <string name="madrid_peso1">You\'ve spent 300€, but you can travel by lorry.</string>
    <string name="madrid_peso2">Oh, no! There is too much weight! What do you want to get rid of?</string>
    <string name="madrid_peso_else1">You are hungry and thirsty. You\'ve to spend 100€</string>
    <string name="madrid_peso_else2">You are freezing. It\'s very cold. You\'ve to spend 100€ to be warm.</string>
    <string name="madrid_peso_if">Good! They aren\'t really necessary.</string>
    <string name="madrid_milan1">Congratulations! You can continue the journey.</string>
    <string name="madrid_rueda1">Oh no, you have a flat tire! What do you want to do?</string>
    <string name="madrid_rueda2">Do you want to continue on foot or do you prefer to wait till someone shows up?</string>
    <string name="madrid_pie">You\'ve met some people on the way. Do you want to talk with them?</string>
    <string name="madrid_pie2">After a few days, you have met some people on the way and this time you decide to go with them.</string>
    <string name="madrid_passport">They want to help you but they do not trust in people without passport. Do you have your passport?</string>
    <string name="madrid_milan2">Congratulations! You can continue the journey.</string>
    <string name="madrid_wait">Some people stop to help you.</string>
    <string name="madrid_milan3">You have to spend 100€ to buy a fake one. Congratulations! You can continue the journey.</string>
    <string name="madrid_fin_easy">GOAL: 150€ / LEVEL EASY\n\n\nYou\'ve just arrived in Milan, but you don\'t have enough money to buy one of the last coveted train tickets you need to travel to the next country.\n\n You need to get 150€ more to access the next level.\n\n Easy, right? So… do you want to play to get it?</string>
    <string name="madrid_fin_medium">GOAL: 250€ / LEVEL MEDIUM\n\n\nYou\'ve just arrived in Milan, but you don\'t have enough money to buy one of the last coveted train tickets you need to travel to the next country.\n\n You need to get 250€ more to access the next level because some decisions have made you lose some money.\n\n So… do you want to play to get it?</string>
    <string name="madrid_fin_hard">GOAL: 350€ / LEVEL HARD\n\n\nYou\'ve just arrived in Milan, but you don\'t have enough money to buy one of the last coveted train tickets you need to travel to the next country.\n\n You need to get 350€ more to access the next level because some decisions have made you lose a lot of money.\n\n So… do you want to play to get it?</string>
    <string name="madrid_fin_extreme">GOAL: 450€ / LEVEL EXTREME\n\n\nYou\'ve just arrived in Milan, but you don\'t have enough money to buy one of the last coveted train tickets you need to travel to the next country.\n\n You need to get 450€ more to access the next level because some decisions have made you lose more money than expected.\n\n So… do you want to play to get it?</string>
    <string name="madrid_instrucc">Touch the screen to move the character. Collect the required amount of coins and the TRAIN TICKET while you avoid missiles and shots.</string>
    <string name="milan_ganado">You Win!!</string>
    <string name="milan_perdido">You Lost!!</string>
    <string name="milan_help">You have 50 seconds </string>
    <string name="milan_help2">to get 15 coins,</string>
    <string name="milan_help3">will you be able to?</string>
    <string name="txtMensajeHablarMoro"> Ill stay with you</string>
    <string name="txtCambioVagon">bye bye!</string>
    <string name="txthistoriaTren">You enter the train, and there is a Moorish boy in the wagon, you sit with him or you change wagon</string>
    <string name="txtCogesMaleta">You take the suitcase</string>
    <string name="txtDejasMaleta">You dont take the suitcase</string>
    <string name="txtHistoriaIncendio">There is a fire in the train, you take the suitcase or you leave it?</string>
    <string name="txtSiguesAyudante">You follow the helper, he knows a way to scape</string>
    <string name="txtNoSiguesAyudante">You dont follow the helper</string>
    <string name="txtHistoriaAyudante">You did not take the suitcase, and a train assistant appears, do you follow him or do not follow him?</string>
    <string name="txtBol">Bug dish</string>
    <string name="txtHamburguesa">Hamburguer</string>
    <string name="txtHistoriaComida">The train assistant offers you bugs, you eat them, or do you want to spend money and buy food</string>
    <string name="txtIntentar">Try Again</string>
    <string name="sarajevo_dialogo_btn_si">yes</string>
    <string name="sarajevo_dialogo_btn_no">no</string>
    <string name="sarajevo_dialogo_btn_reintentar">Try again</string>
    <string name="sarajevo_dialogo_btn_continuar">Continue</string>
    <string name="sarajevo_dialogo_menu_titulo">quit</string>
    <string name="sarajevo_dialogo_menu_mensaje">Do you really want to go out and return to the menu?</string>
    <string name="sarajevo_dialogo_win_titulo">YOU WIN</string>
    <string name="sarajevo_dialogo_win_mensaje">You have managed to escape and you can continue on your way to Istanbul.</string>
    <string name="sarajevo_dialogo_lose_titulo">YOU LOSE</string>
    <string name="sarajevo_dialogo_lose_mensaje">You have not been able to flee. You will have to try again.</string>
    <string name="sarajevo_txt_alojamiento">It is time to rest. Where do you wantt to stay?</string>
    <string name="sarajevo_name_hotel">Hotel</string>
    <string name="sarajevo_txt_hotel">It\'s too expensive</string>
    <string name="sarajevo_name_hostel">Hostel</string>
    <string name="sarajevo_txt_hostel">Where you have to share your room with people from other nationalities?</string>
    <string name="sarajevo_room_1">Room 1</string>
    <string name="sarajevo_room_2">Room 2</string>
    <string name="sarajevo_room_3">Room 3</string>
    <string name="sarajevo_room_4">Room 4</string>
    <string name="sarajevo_txt_pasillo">Which one do you think it\'s your room?</string>
    <string name="sarajevo_txt_chino">Sorry! it isn\'t your room, but now you know more about Chinese people form other cultures. Try again!</string>
    <string name="sarajevo_txt_mejicano">Sorry! it isn\'t your room, but now you know more about Mexican people form other cultures. Try again!</string>
    <string name="sarajevo_txt_africano">Sorry! it isn\'t your room, but now you know more about African people form other cultures. Try again!</string>
    <string name="sarajevo_txt_habitacion">Finally, you\'have found your room! What a hard day, huh!</string>
    <string name="sarajevo_txt_banda">The next day, as you are walking down the street, a racist gang attacks you. What will you do?</string>
    <string name="sarajevo_txt_huir">Run away?</string>
    <string name="sarajevo_txt_policia">Call the police?</string>
    <string name="sarajevo_toast_huir">They chase you, the police see something strange going on and think you are one of them. Run!</string>
    <string name="sarajevo_toast_policia">Remember, you don\'t have visa to enter the country. You are an illegal immigrant. They will arrest you. Run!</string>
    <string name="notes10">Good!</string>
    <string name="notes20">Oh Yeah!</string>
    <string name="notes30">Nice baby!</string>
    <string name="notes40">You rock!</string>
    <string name="notes50">Wonderful!</string>
    <string name="notes100">INCREDIBLE!</string>
    <string name="selectsong">Select the song you wanna play</string>
    <string name="selectdiff">Select your desired difficulty</string>
    <string name="selectplace">Which place you wanna play at?</string>
    <string name="istanbul_earned">You have earned</string>
    <string name="istanbul_coins">coins</string>
    <string name="istanbul_next_route">Go to next route</string>
    <string name="istanbul_play_again">Play again</string>
    <string name="istanbul_route_begins">Your route between Istanbul and Tehran begins.</string>
    <string name="istanbul_route_ship">This time you will have to travel by ship. Will you buy the ticket or will you steal it?</string>
    <string name="select_work">Select Work</string>
    <string name="waiter_tehran">Soap Fact</string>
    <string name="cleaner_tehran">Cleaner</string>
    <string name="return_tehran">Return</string>
</resources>