<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.riberadeltajo.refugiadosgame.common.view.MainActivity">

    <Button
        android:text="@string/route1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button"
        android:layout_alignParentEnd="true"
        android:onClick="ruta1" />

    <Button
        android:text="@string/route2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:id="@+id/button2"
        android:layout_alignParentEnd="true"
        android:onClick="ruta2" />

    <Button
        android:text="@string/route3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:id="@+id/button3"
        android:layout_alignParentEnd="true"
        android:onClick="ruta3" />

    <Button
        android:text="@string/route4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:id="@+id/button4"
        android:layout_alignParentEnd="true"
        android:onClick="ruta4" />

    <Button
        android:text="@string/route5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true"
        android:id="@+id/button5"
        android:layout_alignParentEnd="true"
        android:onClick="ruta5" />

    <TextView
        android:text="Inicialmente, mientras desarrollamos cada episodio, la pantalla principal tendrá los 5 botones que nos llevarán a cada uno para testearlos. Una vez terminados, haremos la pantalla inicial y la puesta en marcha del juego."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/textView"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btn_prueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/button6"
        android:onClick="menu" />
</RelativeLayout>
