<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@drawable/menu_dialog_background"
            android:weightSum="10">

            <TextView
                android:text="@string/btn_creditos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/txtTitulo"
                android:background="@drawable/menu_dialog_titulo_backgroud"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="25dp"
                android:fontFamily="sans-serif"
                android:typeface="monospace"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_green_light"
                android:layout_weight="1.5" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtDiseno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/idea"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtScript"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/script"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/txtMadridTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/route1"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtMadridAutores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/madrid_autores"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/txtMilanTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/route2"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtMilanAutores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/milan_autores"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/txtSarajevoTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/route3"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtSarajevoAutores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/sarajevo_autores"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/txtEstambulTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/route4"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtEstambulAutores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/estambul_autores"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/txtTeheranTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/route5"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtTeheranAutores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/teheran_autores"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:text="@string/btn_salir"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/btnSalir"
                android:layout_weight="1.5"
                android:background="@drawable/menu_btn"
                android:fontFamily="sans-serif-medium"
                android:typeface="monospace"
                android:textSize="20dp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>