<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_teheran_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.riberadeltajo.refugiadosgame.ruta5.view.teheran_main2">

    <TextView
        android:text="@string/select_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/waiter_tehran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="34dp"
        android:id="@+id/btnTehranWaiter"
        android:onClick="camarero" />

    <Button
        android:text="@string/return_tehran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnTehranReturn"
        android:onClick="volver" />

    <Button
        android:text="@string/cleaner_tehran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:id="@+id/btnTehranCleaner"
        android:layout_alignBaseline="@+id/btnTehranWaiter"
        android:layout_alignBottom="@+id/btnTehranWaiter"
        android:layout_alignParentEnd="true"
        android:onClick="limpiador" />
</RelativeLayout>
