<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@drawable/menu_dialog_background"
            android:weightSum="10">

            <TextView
                android:text="@string/btn_jugar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/txtTitulo"
                android:background="@drawable/menu_dialog_titulo_backgroud"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="25dp"
                android:fontFamily="sans-serif"
                android:typeface="monospace"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_green_light"
                android:layout_weight="1.5" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5.5">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:srcCompat="@drawable/bandera_madrid"
                    android:id="@+id/imgBandera"
                    android:layout_weight="8" />

                <TextView
                    android:text="@string/dialog_play_mensaje"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/textView3"
                    android:layout_weight="2"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@android:color/white"
                    android:textStyle="normal|bold" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">

                <Button
                    android:text="@string/btn_continuar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnContinuar"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:typeface="monospace"
                    android:textSize="20dp"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/white"
                    android:background="@drawable/menu_btn" />

                <Button
                    android:text="@string/btn_nueva"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnNuevo"
                    android:layout_weight="1"
                    android:typeface="monospace"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20dp"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/white"
                    android:background="@drawable/menu_btn" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@drawable/menu_btn"
                android:fontFamily="sans-serif-medium"
                android:text="@string/btn_cerrar"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="normal|bold"
                android:typeface="monospace" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>