<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/refugee">

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="36dp"
                android:textStyle="normal|bold" />

            <Button
                android:id="@+id/btnJugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/menu_btn"
                android:fontFamily="sans-serif-medium"
                android:text="@string/btn_jugar"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="25dp"
                android:textStyle="normal|bold"
                android:typeface="monospace" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnCreditos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_btn"
                android:fontFamily="sans-serif-medium"
                android:text="@string/btn_creditos"
                android:textColor="@android:color/white"
                android:textSize="25dp"
                android:textStyle="normal|bold"
                android:typeface="monospace" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/menu_btn"
                android:fontFamily="sans-serif-medium"
                android:text="@string/btn_salir"
                android:textColor="@android:color/white"
                android:textSize="25dp"
                android:textStyle="normal|bold"
                android:typeface="monospace" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>